z-index fix; preferences panel was z-indexed out of view

--- a/app/assets/stylesheets/partials/_app.html.scss
+++ b/app/assets/stylesheets/partials/_app.html.scss
@@ -59,6 +59,11 @@ a{
   top: 0;
 }
 
+.welcome-message__wrapper,
+.notification__wrapper,
+.notifications-wrapper,
+.action-layout,
+.preferences-layout,
 .main-layout {
   z-index: 1;
 }
